Fixes toolContainer adding scrollbar and delimiting its height

--- a/src/Styles/toolContainer.css
+++ b/src/Styles/toolContainer.css
@@ -1,42 +1,51 @@
 .toolsContainerDad {
   border: solid black 3px;
-
-  width: 320px;
+  box-sizing: border-box;
+  height: -webkit-fill-available;
+  justify-self: center;
+  margin: 16px;
+  max-width: 326px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 .toolsContainer {
   display: grid;
-  grid-template-columns: repeat(4, 80px);
-  grid-auto-rows: minmax(80px, 1fr);
+  grid-auto-rows: 80px;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
+  grid-template-columns: repeat(4, 80px);
+  max-height: 100%;
   min-width: 320px;
 }
 .tools {
-  display: flex;
   background-color: transparent;
+  display: flex;
   grid-area: auto;
 }
 .selectedToolContainer {
+  align-items: center;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+}
+.selectedLayerContainer {
   align-items: center;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .selectedTool {
   border: solid black 3px;
   display: flex;
+  height: 100px;
   width: 100px;
-  height: 100px;
-}
-.selectedLayer {
-  display: flex;
-  height: 100px;
 }
 .headerToolContainer {
+  box-sizing: border-box;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-bottom: 30px;
-  width: 320px;
+  padding: 16px;
+  width: 100%;
 }
 .form {
   display: grid;
@@ -52,7 +61,11 @@
 }
 .buttosAndTools {
   align-items: center;
-  display: flex;
-  flex-direction: column;
-  width: 360px;
+  display: grid;
+  grid-template-rows: 40px 1fr;
+  width: 100%;
+}
+.toolsCanvas {
+  overflow-y: auto;
+  overflow-x: auto;
 }
